--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "grpc/grpc": "v1.25.0",
         "fideloper/proxy": "^4.0",
-        "kreait/firebase-php": "^4.0",
+        "firevel/firestore": "^1.0",
+        "google/cloud-firestore": "^1.8",
+        "kreait/firebase-php": "^4.33",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "silber/bouncer": "v1.0.0-rc.6"
